// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBarFragment should render without crashing 1`] = `
<div>
  <div
    class="progressBarFragment__container progressBarFragment__container--current"
  >
    <div>
      Bullet
    </div>
    <div
      class="progressBarFragment progressBarFragment--current"
    >
      <div
        class="progressBarFragment__state"
      />
    </div>
    <div
      class="stepCard card"
    >
      <div
        class="card-body"
      >
        <div>
          <div
            class=""
          >
            <div
              class="yt_player"
            />
          </div>
        </div>
        <h4
          class="card-text"
          text-muted="true"
        >
          Opis kroku:
        </h4>
        <h4
          class="mt-3 card-text"
          text-muted="true"
        >
          Akcje:
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBarFragment should render without crashing when current is false and step is defined 1`] = `
<div>
  <div
    class="progressBarFragment__container progressBarFragment__container--visited"
  >
    <div>
      Bullet
    </div>
    <div
      class="progressBarFragment progressBarFragment--visited"
    >
      <div
        class="progressBarFragment__state"
      />
    </div>
    <div
      class="stepCard card"
    >
      <div
        class="card-body"
      >
        <div>
          <div
            class=""
          >
            <div
              class="yt_player"
            />
          </div>
        </div>
        <h4
          class="card-text"
          text-muted="true"
        >
          Opis kroku:
        </h4>
        <h4
          class="mt-3 card-text"
          text-muted="true"
        >
          Akcje:
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBarFragment should render without crashing when current is false and step is undefined 1`] = `
<div>
  <div
    class="progressBarFragment__container progressBarFragment__container--next"
  >
    <div
      class="progressBarFragment progressBarFragment--next"
    >
      <div
        class="progressBarFragment__state"
      />
    </div>
  </div>
</div>
`;
